## gan.py

from gpt2_model import GPT2Model
import torch
from transformers import GPT2Tokenizer, GPT2LMHeadModel

class GAN:
    def __init__(self, discriminator: GPT2Model, generator: GPT2Model):
        self.discriminator = discriminator
        self.generator = generator
        self.tokenizer = GPT2Tokenizer.from_pretrained('gpt2')
        self.model = GPT2LMHeadModel.from_pretrained('gpt2')

    def train(self, input_text):
        inputs = self.tokenizer(input_text, return_tensors="pt")
        outputs = self.model(**inputs, labels=inputs["input_ids"])
        loss = outputs.loss
        # Implement the code for training the GAN network using PyTorch and Hugging Face Transformers library
        # Your implementation here
        return loss

    def evaluate(self, input_text):
        inputs = self.tokenizer(input_text, return_tensors="pt")
        outputs = self.model(**inputs, labels=inputs["input_ids"])
        loss = outputs.loss
        # Implement the code for evaluating the GAN network
        # Your implementation here
        return loss

    def generate_question_answer(self, input_text):
        inputs = self.tokenizer(input_text, return_tensors="pt")
        outputs = self.model.generate(**inputs, max_length=50, num_return_sequences=3)
        question_answer_pairs = [self.tokenizer.decode(output, skip_special_tokens=True) for output in outputs]
        # Implement the code for generating question-answer pairs using the trained GAN network
        # Your implementation here
        return question_answer_pairs
