
classDiagram
    class GAN {
        -discriminator GPT2Model
        -generator GPT2Model
        +train() 
        +evaluate() 
        +generate_question_answer() 
    }
    class GPT2Model {
        -transformer GPT2Model
        -classifier Sequential
        +from_pretrained(model_name: str)
    }
    GAN --> GPT2Model
    GAN --> GPT2Model
    GPT2Model --> GPT2Model
    GPT2Model --> Sequential
